# cs336-assignment1-basics

./: .gitignore  Cargo.toml  WRITE.MD  pyproject.toml  train.py
configs/: default.yaml  mps.yaml  server.yaml
cs336_basics/: checkpointing.py  common.py  data.py  einstein_example.py  functions.py  optimizers.py  tokenizer.py
cs336_basics/layers/: __init__.py  attention.py  embedding.py  feed_forward.py  linear.py  model.py  norm.py  transformer.py
outputs/2026-04-20/08-41-12/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-20/09-00-08/.hydra/: config.yaml  hydra.yaml
src/: lib.rs
tests/: adapters.py  common.py  test_tokenizer.py  test_train_bpe.py
