[package]
name = "cs336-basics-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "cs336_basics_rust"
crate-type = ["cdylib"]

[dependencies]
mimalloc = { version = "0.1", default-features = false }
pyo3 = { version = "0.28.3", features = ["extension-module"] }
rayon = "1.12.0"
regex = "1.12.3"
rustc-hash = "2.1.2"
